hellovccservice.yml
apiVersion: v1
kind: Service
metadata:
  name: hellovccservice
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: hellovcc
