hellovccingressrules.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations: 
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: alyoun-vcrsdemo.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: hellovccservice
          servicePort: 80
